--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,25 @@
     },
     "autoload": {
         "psr-0": { "PhpFlot": "src/" }
-    }
+    },
+    "repositories": 
+    [
+	    {
+	        "type": "package",
+	        "package": {
+	            "name": "loogaroo/php-flot",
+	            "version": "dev-master",
+	            "source": {
+	                "url": "git@github.com:loogaroo/php-flot.git",
+	                "type": "git",
+	                "reference": "master"
+	            },
+	            "autoload": {
+	                "psr-0" : {
+	                    "PhpFlot" : "src"
+	                }
+	            }
+	        }
+	    }
+	]   
 }
